--- a/project 1/Speech recognition for isolated words.ipynb
+++ b/project 1/Speech recognition for isolated words.ipynb
@@ -18,6 +18,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Feature Extraction\n",
+    "Feature extraction is the method of transforming the input data into a set of features which represents as closely as possible the input data. Audio feature extraction use Digital Signal Processing techniques to convert the audio signals into numerical feature sets which can then be used for training our machine learning models."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## MFCC"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "MFCC stands for mel-frequency cepstral coefficients. They were introduced by Davis and Mermelstein in the 1980's. These are the most commonly used features in automatic speech recognition. MFCCs are derived from a type of cepstral representation of the audio clip. A cepstrum is the result of taking the inverse fourier transform of the logarithm of the estimated spectrum of the signal. The power cepstrum in particular finds applications in the analysis of human speech. The main difference between the MFC and cepstrum is that in MFC, equal spacing of the frequency bands takes place which approximates the human auditory system’s response more closely. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Import library"
    ]
   },
