--- a/project 1/Speech recognition for isolated words.ipynb
+++ b/project 1/Speech recognition for isolated words.ipynb
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -702,12 +702,35 @@
     "    n_c2 = c2.shape[0]\n",
     "    D = np.zeros([n_c1+1,n_c2+1])+np.inf\n",
     "    D [1,1] = 0\n",
-    "    for i in range(1,n+1):\n",
-    "        for j in range(1,m+1):\n",
+    "    for i in range(1,n_c1+1):\n",
+    "        for j in range(1,n_c2+1):\n",
     "             #local distance \n",
     "            d = euclid(c1[i-1],c2[j-1])\n",
     "            D[i,j] = d = min([D[i,j-1], D[i-1,j], D[i-1,j-1]])\n",
     "    return D[-1,-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "inf"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x1 =readwav(\"digits/train/ae_1a.wav\")\n",
+    "x4 =readwav(\"digits/train/ae_1a.wav\")\n",
+    "euclidean_norm = lambda x, y: np.abs(x - y)\n",
+    "dtw(x.T,y.T)"
    ]
   },
   {
