--- a/project 1/Speech recognition for isolated words.ipynb
+++ b/project 1/Speech recognition for isolated words.ipynb
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,10 +574,22 @@
     "        The 2-dim cepstral coefficients of the whole file\n",
     "    \"\"\"\n",
     "    \n",
-    "    x, fs = readwav(fname)\n",
-    "    # Pre-emphasis\n",
-    "    x = preemph(x)\n",
+    "    signal, sample_rate = readwav(fname)\n",
     "    \n",
+    "    # Pre-emphasis\n",
+    "    signal = preemph(signal)\n",
+    "    \n",
+    "    # Framing \n",
+    "    frame_length = int(round(win * sample_rate))\n",
+    "    frame_step = int(round(step*fs))\n",
+    "    \n",
+    "    num_frames = int(np.ceil(float(np.abs(len(signal) - frame_length)) / frame_step)) \n",
+    "    \n",
+    "    # Mel-frequency Cepstral Coefficients\n",
+    "    \n",
+    "    \n",
+    "    # Hamming window\n",
+    "    frames = numpy.hamming(frame_length)\n",
     "    \n",
     "    pass"
    ]
